--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,18 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'war'
+apply plugin: "java"
+apply plugin: "idea"
+apply plugin: "org.springframework.boot"
+apply plugin: "war"
 
 jar {
-    baseName = 'gs-spring-boot'
-    version = '0.1.0'
+    baseName = "gs-spring-boot"
+    version = "0.1.0"
 }
 
 war {
-    baseName = 'connect4-api'
+    baseName = "connect4-api"
 }
 
 repositories {
@@ -40,5 +40,10 @@ dependencies {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.0'
+    gradleVersion = "4.0"
+}
+
+task explodedWar(type: Sync) {
+    into "${buildDir}/exploded"
+    with war
 }
