--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,11 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
-    // end::actuator[]
-    // tag::tests[]
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile(group: "org.postgresql", name: "postgresql", version: "42.2.1")
+
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    // end::tests[]
     providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"
 }
 
