--- a/config/application-aws.properties
+++ b/config/application-aws.properties
@@ -2,6 +2,8 @@ spring.datasource.url=${POSTGRES_URL}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.platform=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-s
+spring.jpa.show-sql=false
+
+
