--- a/config/application.properties
+++ b/config/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/connect4
 spring.datasource.username=postgres
 spring.datasource.password=testing
 spring.datasource.platform=POSTGRESQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
