--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile(group: "org.postgresql", name: "postgresql", version: "42.2.1")
+    compile(group: "com.google.guava", name: "guava", version: "19.0")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
     providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"
