--- a/config/application.properties
+++ b/config/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=testing
 spring.datasource.platform=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
