Setup local application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/connect4
-spring.datasource.username=postgres
-spring.datasource.password=testing
-spring.datasource.platform=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=local
