--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-spring.datasource.url=jdbc:postgresql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
-spring.datasource.username=${RDS_USERNAME}
-spring.datasource.password=${RDS_PASSWORD}
-spring.datasource.platform=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=false
+spring.profiles.active=${ENV:local}
