--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -3,5 +3,5 @@ spring.datasource.username=${RDS_USERNAME}
 spring.datasource.password=${RDS_PASSWORD}
 spring.datasource.platform=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
